# PARLAM

./: CITATION.cff  README.md  README_Operator.md  requirements.txt
parlam_interfaces/: CMakeLists.txt  package.xml  parlam_msg_mappings.yaml
parlam_interfaces/action/: Llm.action
parlam_interfaces/srv/: Input.srv  Llm.srv  Output.srv
parlam_pkg/: package.xml  setup.cfg  setup.py
parlam_pkg/data/: greetings.json  handover.txt  info.txt
parlam_pkg/parlam_pkg/: chroma_database.py  exp_functions.py  llm_server.py  parlam_client.py  speech_input_server.py  speech_output_server.py
parlam_pkg_bringup/: CMakeLists.txt  package.xml
parlam_pkg_bringup/launch/: bridge.launch  parlam.launch.py  parlam_operator.launch.py
